; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_clip_plane_uniform.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_clip_plane_uniform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { %struct.wined3d_gl_info* }
%struct.wined3d_gl_info = type { i32 }
%struct.wined3d_state = type { i32*, %struct.wined3d_vec4* }
%struct.wined3d_vec4 = type { i32 }
%struct.glsl_shader_prog_link = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.wined3d_matrix = type { i32 }

@WINED3D_TS_VIEW = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_context*, %struct.wined3d_state*, i32, %struct.glsl_shader_prog_link*)* @shader_glsl_clip_plane_uniform to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shader_glsl_clip_plane_uniform(%struct.wined3d_context* %0, %struct.wined3d_state* %1, i32 %2, %struct.glsl_shader_prog_link* %3) #0 {
  %5 = alloca %struct.wined3d_context*, align 8
  %6 = alloca %struct.wined3d_state*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.glsl_shader_prog_link*, align 8
  %9 = alloca %struct.wined3d_gl_info*, align 8
  %10 = alloca %struct.wined3d_matrix, align 4
  %11 = alloca %struct.wined3d_vec4, align 4
  store %struct.wined3d_context* %0, %struct.wined3d_context** %5, align 8
  store %struct.wined3d_state* %1, %struct.wined3d_state** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.glsl_shader_prog_link* %3, %struct.glsl_shader_prog_link** %8, align 8
  %12 = load %struct.wined3d_context*, %struct.wined3d_context** %5, align 8
  %13 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %12, i32 0, i32 0
  %14 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %13, align 8
  store %struct.wined3d_gl_info* %14, %struct.wined3d_gl_info** %9, align 8
  %15 = load %struct.wined3d_state*, %struct.wined3d_state** %6, align 8
  %16 = getelementptr inbounds %struct.wined3d_state, %struct.wined3d_state* %15, i32 0, i32 1
  %17 = load %struct.wined3d_vec4*, %struct.wined3d_vec4** %16, align 8
  %18 = load i32, i32* %7, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds %struct.wined3d_vec4, %struct.wined3d_vec4* %17, i64 %19
  %21 = bitcast %struct.wined3d_vec4* %11 to i8*
  %22 = bitcast %struct.wined3d_vec4* %20 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %21, i8* align 4 %22, i64 4, i1 false)
  %23 = load %struct.wined3d_state*, %struct.wined3d_state** %6, align 8
  %24 = call i32 @use_vs(%struct.wined3d_state* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %35, label %26

26:                                               ; preds = %4
  %27 = load %struct.wined3d_state*, %struct.wined3d_state** %6, align 8
  %28 = getelementptr inbounds %struct.wined3d_state, %struct.wined3d_state* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = load i64, i64* @WINED3D_TS_VIEW, align 8
  %31 = getelementptr inbounds i32, i32* %29, i64 %30
  %32 = call i32 @invert_matrix(%struct.wined3d_matrix* %10, i32* %31)
  %33 = call i32 @transpose_matrix(%struct.wined3d_matrix* %10, %struct.wined3d_matrix* %10)
  %34 = call i32 @multiply_vector_matrix(%struct.wined3d_vec4* %11, %struct.wined3d_vec4* %11, %struct.wined3d_matrix* %10)
  br label %35

35:                                               ; preds = %26, %4
  %36 = load %struct.glsl_shader_prog_link*, %struct.glsl_shader_prog_link** %8, align 8
  %37 = getelementptr inbounds %struct.glsl_shader_prog_link, %struct.glsl_shader_prog_link* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = load i32, i32* %7, align 4
  %41 = zext i32 %40 to i64
  %42 = add nsw i64 %39, %41
  %43 = getelementptr inbounds %struct.wined3d_vec4, %struct.wined3d_vec4* %11, i32 0, i32 0
  %44 = call i32 @glUniform4fv(i64 %42, i32 1, i32* %43)
  %45 = call i32 @GL_EXTCALL(i32 %44)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @use_vs(%struct.wined3d_state*) #2

declare dso_local i32 @invert_matrix(%struct.wined3d_matrix*, i32*) #2

declare dso_local i32 @transpose_matrix(%struct.wined3d_matrix*, %struct.wined3d_matrix*) #2

declare dso_local i32 @multiply_vector_matrix(%struct.wined3d_vec4*, %struct.wined3d_vec4*, %struct.wined3d_matrix*) #2

declare dso_local i32 @GL_EXTCALL(i32) #2

declare dso_local i32 @glUniform4fv(i64, i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
